Updating form intake

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -109,7 +109,7 @@
 
 
   <div class="copyright small mt-3">
-    Copyright © 2025 Adrián Robles Fuentes. All rights reserved.
+    Copyright © 2025 Adrián Robles Fuentes. Todos los derechos reservados.
   </div>
   
   <ul class="p-0 mb-1 small">
