--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,8 +3,15 @@ layout: main
 ---
 
 <article class="container my-5">
-    <h1 class="mb-4">{{ page.title }}</h1>
-    <div class="post-content">
-      {{ content }}
-    </div>
-  </article>
+  <h1 class="mb-4">{{ page.title }}</h1>
+
+  {% if page.image %}
+  <img src="{{ site.baseurl }}/{{ page.image }}"
+     alt="{{ page.title }}"
+     class="post-image img-fluid rounded shadow-sm mb-4">
+  {% endif %}
+
+  <div class="post-content">
+    {{ content }}
+  </div>
+</article>
